--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -27,7 +27,9 @@
                 <ng-template pTemplate="body" let-assigned let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>{{assigned.TaskType}}</td>
+                        <td>
+                            <a href="javascript:void(0);" (click)="viewtask(assigned.TaskType,assigned.ReferenceId)">{{ assigned.TaskType }}</a>
+                        </td>
                         <td>{{assigned.TaskName}}</td>
                         <td>{{assigned.Stage}}</td>
                         <td>{{assigned.assignedGroup}}</td>
