--- a/VlimsApp/ClientApp/src/styles.scss
+++ b/VlimsApp/ClientApp/src/styles.scss
@@ -162,6 +162,11 @@ h5.page-card-title{
   color: #ffffff;
 }
 
+.status-reject {
+  background-color: #FF0000;
+  color: #ffffff;
+}
+
 .status-pending {
   background-color: #ffd7c0;
   color: #bc5b25;
