--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -42,7 +42,7 @@
                         <td>{{docType?.approvedby}}</td>
                         <td>{{docType?.approvedOn| date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(docType['status'])">{{docType.status}} </span></td>
-                        <td class="text-center"><i (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
+                        <td class="text-center"><i *ngIf="docType?.status=='In-Progress'" (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
