--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -15,7 +15,9 @@
       <div class="p-4 bg-white shadow-dark rounded-2">
         <p-table
           [value]="preparationsDatasource"
-          tableStyleClass="table table-striped"
+          tableStyleClass="table table-striped" [rows]="itemsPerPage"
+            [paginator]="true" [totalRecords]="preparationsDatasource.length"
+            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage" 
         >
           <ng-template pTemplate="header">
             <tr>
