--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -14,7 +14,9 @@
       <div class="p-4 bg-white shadow-dark rounded-2">
         <p-table
           [value]="effectivesDatasource"
-          tableStyleClass="table table-striped"
+          tableStyleClass="table table-striped" [rows]="itemsPerPage"
+            [paginator]="true" [totalRecords]="effectivesDatasource.length"
+            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage"
         >
           <ng-template pTemplate="header">
             <tr>
