--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -17,7 +17,9 @@
             <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table #workflowTable [value]="types"
             [globalFilterFields]="['docStage', 'docType', 'department','registeredBy', 'status']"
-             tableStyleClass="table table-striped">
+             tableStyleClass="table table-striped" [rows]="itemsPerPage"
+            [paginator]="true" [totalRecords]="types.length"
+            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
