--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -28,7 +28,7 @@
                     <tr>  
                         <td>{{ i + 1 }}</td>  
                         <td>
-                            <a href="javascript:void(0);" (click)="viewtask(assigned.TaskType,assigned.ReferenceId)">{{ assigned.TaskType }}</a>
+                            <p (click)="viewtask(assigned.TaskType,assigned.ReferenceId)">{{ assigned.TaskType }}</p>
                         </td>
                         <td>{{assigned.TaskName}}</td>
                         <td>{{assigned.Stage}}</td>
