--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -1,86 +1,54 @@
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
-      <h4 class="page-title">{{editMode? 'Update': 'Add'}} Existing Document Request</h4>
-    </div>
+      <div class="col">
+         
+          <div class="d-flex justify-content-between align-items-center">
+              <h4 class="page-title flex-grow-1">Existing Document Requests</h4>
+              <div class="d-flex page-title-actions">
+                <input type="text" class="form-control" placeholder="Search">
+                <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button>
+              </div>
+            </div>
+      </div>
   </div>
   <div class="row p-2">
-    <div class="col">
-      <form (ngSubmit)="adddExistingDocument()">
-        <div class="p-4 bg-white shadow-dark rounded-2">
-
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Document Type</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="documentType" name="DocumentType" placeholder=""
-                [(ngModel)]="existingDocReq.documentType" [disabled]="viewMode" />
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Department</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="department" name="Department" placeholder=""
-                [(ngModel)]="existingDocReq.department" [disabled]="viewMode" />
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="documentTitle" class="col-sm-2 col-form-label">Document Title</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="documentTitle" name="documentTitle"
-                placeholder="Document Title" [(ngModel)]="existingDocReq.documenttitle" readonly/>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Document Number</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="dnumber" name="Dnumber" placeholder=""
-                [(ngModel)]="existingDocReq.documentno" [disabled]="viewMode" />
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Effective Date</label>
-            <div class="col-sm-10">
-              <input type="date" class="form-control" id="edate" name="Edate" placeholder="Enter First Nmae"
-                [(ngModel)]="existingDocReq.effectiveDate" [disabled]="viewMode" />
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Review Date</label>
-            <div class="col-sm-10">
-              <input type="date" class="form-control" id="rdate" name="Rdate" placeholder="Enter First Nmae"
-                [(ngModel)]="existingDocReq.reviewDate" [disabled]="viewMode" />
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Browse Document</label>
-            <div class="col-sm-10">
-              <input type="file" class="form-control" id="bdoc" name="Bdoc" placeholder=""
-                [(ngModel)]="existingDocReq.browse" [disabled]="viewMode" />
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="bdoc" class="col-sm-2 col-form-label">Sample Template</label>
-            <div class="col-sm-10">
-              <a [href]="fileUploadLink" target="_blank">Upload Excel Sheet</a>
-            </div>
-          </div>
-
-          <div class="form-group row my-4">
-            <div class="col-sm-10 offset-sm-2">
-              <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
-              <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
+      <div class="col">
+          <div class="p-4 bg-white shadow-dark rounded-2">
+          <p-table  [value]="existingDocDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+          [paginator]="true" [totalRecords]="existingDocDatasource.length"
+          [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage" >
+              <ng-template pTemplate="header">
+                  <tr>
+                      <th>#</th>
+                      <th pSortableColumn="edrId" style="width:20%">Req Code<p-sortIcon field="edrId"></p-sortIcon></th>
+                      <th pSortableColumn="documenttitle" style="width:10%">Document Title<p-sortIcon field="documenttitle"></p-sortIcon></th>
+                      <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
+                      <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
+                      <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
+                      <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
+                      <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>
+                      <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
+                      <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
+                      <th style="width:80px">Actions</th>
+                  </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
+                  <tr>  
+                      <td>{{ i + 1 }}</td>  
+                      <td>{{existingdoc?.edrId}}</td>
+                      <td>{{existingdoc?.documenttitle}}</td>
+                      <td>{{existingdoc?.documentno}}</td>
+                      <td>{{existingdoc?.documenttype}}</td>
+                      <td>{{existingdoc?.department}}</td>
+                      <td>{{existingdoc?.effectiveDate | date}}</td>
+                      <td>{{existingdoc?.reviewDate| date}}</td>
+                      <!-- <td>{{existingdoc?.approvedby}}</td>
+                      <td>{{existingdoc?.approvedOn| date}}</td> -->
+                      <td class="text-center"><i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i></td>
+                  </tr>
+              </ng-template>
+          </p-table>
+      </div>
   </div>
-</div>
+  </div>
+</div>  
