--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -6,62 +6,47 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="adddoctype(documentType)"  #fm="ngForm">
-      <div class="p-4 bg-white shadow-dark rounded-2">
-        
+      <form (ngSubmit)="adddoctype(documentType)" #fm="ngForm">
+        <div class="p-4 bg-white shadow-dark rounded-2">
+
           <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label"
-              >Document Type</label
-            >
+            <label for="documentType" class="col-sm-2 col-form-label">Document Type</label>
             <div class="col-sm-10">
-              <input
-                type="text"
-                class="form-control"
-                id="documentType"
-                name="documentType"
-                placeholder="Document Type Name"
-                [(ngModel)]="documentType.Documenttypename" [disabled]="viewMode"
-               
-              />
+              <input type="text"
+                     class="form-control"
+                     id="documentType"
+                     name="documentType"
+                     placeholder="Document Type Name"
+                     [(ngModel)]="documentType.Documenttypename" [disabled]="viewMode" />
             </div>
           </div>
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">Prefix</label>
             <div class="col-sm-10">
-              <input
-                type="text"
-                class="form-control"
-                id="prefix"
-                name="prefix"
-                placeholder="Prefix"
-                [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode"
-                
-              />
+              <input type="text"
+                     class="form-control"
+                     id="prefix"
+                     name="prefix"
+                     placeholder="Prefix"
+                     [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode" />
             </div>
           </div>
           <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label"
-              >Description</label
-            >
+            <label for="description" class="col-sm-2 col-form-label">Description</label>
             <div class="col-sm-10">
-              <textarea
-                class="form-control"
-                id="description"
-                name="description"
-                rows="3"
-                placeholder="Description"
-                [(ngModel)]="documentType.Description" [disabled]="viewMode"
-               
-              ></textarea>
+              <textarea class="form-control"
+                        id="description"
+                        name="description"
+                        rows="3"
+                        placeholder="Description"
+                        [(ngModel)]="documentType.Description" [disabled]="viewMode"></textarea>
             </div>
           </div>
           <div class="form-group row">
-            <label for="department" class="col-sm-2 col-form-label"
-              >Assign to Department</label
-            >
+            <label for="department" class="col-sm-2 col-form-label">Assign to Department</label>
             <div class="col-sm-10">
-             
-                <div *ngIf="viewMode">
+
+              <div *ngIf="viewMode">
                 <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" name="department" id="department" optionLabel="DepartmentName" display="chip" [disabled]="viewMode">
                   <ng-template pTemplate="selectedItems" let-options>
                     <ng-container *ngTemplateOutlet="customTemplate; context: {$implicit: options}"></ng-container>
@@ -75,27 +60,32 @@
                 </ng-template>
               </div>
               <div *ngIf="!viewMode">
-              <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" 
-              name="department" id="department" optionLabel="DepartmentName"
-              
-               display="chip">
-              </p-multiSelect>
-            </div>
+                <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department"
+                               name="department" id="department" optionLabel="DepartmentName"
+                               display="chip">
+                </p-multiSelect>
+              </div>
             </div>
           </div>
-          
-        
-      </div>
 
-      <div class="form-group row my-4">
-        <div class="col-sm-10 offset-sm-2">
-          <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-          <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
-          <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+
         </div>
-      </div>
 
-    </form>
+        <div class="form-group row my-4">
+          <div class="col-sm-10 offset-sm-2">
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+
+            <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && documentType.Status!='Approved'"  (click)="approve();" >Approve</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && documentType.Status!='Approved'" (click)="reinitiative();" >Re-Initiate</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && documentType.Status!='Approved'"  (click)="reject();" >Reject</button>
+
+            
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+          </div>
+        </div>
+
+      </form>
     </div>
   </div>
 </div>
