--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -9,43 +9,33 @@
       <!-- <form (ngSubmit)="addTemplate()"> -->
       <div class="p-4 bg-white shadow-dark rounded-2">
         <div class="form-group row">
-          <label for="templateName" class="col-sm-2 col-form-label"
-            >Template Name</label
-          >
+          <label for="templateName" class="col-sm-2 col-form-label">Template Name</label>
           <div class="col-sm-10">
-            <input
-              type="text"
-              class="form-control mw-350"
-              id="Templatename"
-              name="Templatename"
-              placeholder="Template Name"
-              [(ngModel)]="templateForm.Templatename"
-            />
+            <input type="text"
+                   class="form-control mw-350"
+                   id="Templatename"
+                   name="Templatename"
+                   placeholder="Template Name"
+                   [(ngModel)]="templateForm.Templatename" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="prefix" class="col-sm-2 col-form-label"
-            >Unique Code</label
-          >
+          <label for="prefix" class="col-sm-2 col-form-label">Unique Code</label>
           <div class="col-sm-10">
-            <input
-              type="text"
-              class="form-control mw-350"
-              id="prefix"
-              name="prefix"
-              placeholder="Prefix"
-              [(ngModel)]="templateForm.Uniquecode"
-              readonly
-            />
+            <input type="text"
+                   class="form-control mw-350"
+                   id="prefix"
+                   name="prefix"
+                   placeholder="Prefix"
+                   [(ngModel)]="templateForm.Uniquecode"
+                   readonly />
           </div>
         </div>
         <div class="form-group row">
-          <label for="docType" class="col-sm-2 col-form-label"
-            >Document Type</label
-          >
+          <label for="docType" class="col-sm-2 col-form-label">Document Type</label>
           <div class="col-sm-10">
-            <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type" 
-            optionLabel="Documenttypename" ></p-dropdown>
+            <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type"
+                        optionLabel="Documenttypename"></p-dropdown>
             <!-- <input
               type="text"
               class="form-control mw-350"
@@ -57,18 +47,14 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="description" class="col-sm-2 col-form-label"
-            >Description</label
-          >
+          <label for="description" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-10">
-            <textarea
-              class="form-control mw-350"
-              id="description"
-              name="description"
-              rows="3"
-              placeholder="Description"
-              [(ngModel)]="templateForm.description"
-            ></textarea>
+            <textarea class="form-control mw-350"
+                      id="description"
+                      name="description"
+                      rows="3"
+                      placeholder="Description"
+                      [(ngModel)]="templateForm.description"></textarea>
           </div>
         </div>
       </div>
@@ -81,33 +67,25 @@
               <table class="w-100">
                 <tbody>
                   <tr *ngFor="let row of gridData; let rowIndex = index">
-                    <ng-container
-                      *ngFor="let cell of row; let colIndex = index"
-                    >
+                    <ng-container *ngFor="let cell of row; let colIndex = index">
                       <td>
                         <div class="template-cell">
                           <div class="custom-select">
-                            <select
-                              class="select-dropdown form-select"
-                              [(ngModel)]="
+                            <select class="select-dropdown form-select"
+                                    [(ngModel)]="
                                 gridData[rowIndex][colIndex].selectedOption
-                              "
-                            >
-                              <option
-                                *ngFor="let option of selectOptions"
-                                [value]="option.value"
-                              >
+                              ">
+                              <option *ngFor="let option of selectOptions"
+                                      [value]="option.value">
                                 {{ option.name }}
                               </option>
                             </select>
                           </div>
-                          <input
-                            [(ngModel)]="
+                          <input [(ngModel)]="
                               gridData[rowIndex][colIndex].inputValue
                             "
-                            class="form-control"
-                            type="text"
-                          />
+                                 class="form-control"
+                                 type="text" />
                         </div>
                       </td>
                     </ng-container>
@@ -142,33 +120,25 @@
               <table class="w-100">
                 <tbody>
                   <tr *ngFor="let row of gridFooterData; let rowIndex = index">
-                    <ng-container
-                      *ngFor="let cell of row; let colIndex = index"
-                    >
+                    <ng-container *ngFor="let cell of row; let colIndex = index">
                       <td>
                         <div class="template-cell">
                           <div class="custom-select">
-                            <select
-                              class="select-dropdown form-select"
-                              [(ngModel)]="
+                            <select class="select-dropdown form-select"
+                                    [(ngModel)]="
                               gridFooterData[rowIndex][colIndex].selectedOption
-                              "
-                            >
-                              <option
-                                *ngFor="let option of selectOptions"
-                                [value]="option.value"
-                              >
+                              ">
+                              <option *ngFor="let option of selectOptions"
+                                      [value]="option.value">
                                 {{ option.name }}
                               </option>
                             </select>
                           </div>
-                          <input
-                            [(ngModel)]="
+                          <input [(ngModel)]="
                             gridFooterData[rowIndex][colIndex].inputValue
                             "
-                            class="form-control"
-                            type="text"
-                          />
+                                 class="form-control"
+                                 type="text" />
                         </div>
                       </td>
                     </ng-container>
@@ -197,17 +167,17 @@
 
       <div class="form-group row my-4">
         <div class="col-sm-4 offset-sm-5">
-          <button
-            type="button"
-            class="btn btn-outline-secondary mx-2"
-            (click)="onCancel()"
-          >
+          <button type="button"
+                  class="btn btn-outline-secondary mx-2"
+                  (click)="onCancel()">
             Cancel
           </button>
           <button type="submit" class="btn btn-primary" (click)="addTemplate()">Submit</button>
+          <button type="submit" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="approve()">Approve</button>
+          <button type="submit" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reinitiative()">Re-Initiative</button>
+          <button type="submit" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reject()">Reject</button>
         </div>
       </div>
-
       <!-- </form> -->
     </div>
   </div>
