--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -27,8 +27,17 @@
                 <ng-template pTemplate="body" let-assigned let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>
+                        <!-- <td>
                             <p (click)="viewtask(assigned.TaskType,assigned.ReferenceId)">{{ assigned.TaskType }}</p>
+                        </td> -->
+                        <td>
+                            <button
+                            type="button"
+                            class="btn btn-outline-secondary mx-2"
+                            (click)="viewtask(assigned.TaskType,assigned.ReferenceId)"
+                          >
+                          {{ assigned.TaskType }}
+                          </button>
                         </td>
                         <td>{{assigned.TaskName}}</td>
                         <td>{{assigned.Stage}}</td>
