--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -55,6 +55,7 @@
   <div class="row p-2">
     <div class="col">
       <form (ngSubmit)="submit(newdept)" #fm="ngForm">
+        <!-- <form (ngSubmit)="submit(fm)" #fm="ngForm"> -->
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
@@ -65,7 +66,13 @@
                      id="departmentName"
                      name="departmentName"
                      placeholder="Department Name"
-                     [(ngModel)]="newdept.DepartmentName" [disabled]="viewMode" />
+                     [(ngModel)]="newdept.DepartmentName" [disabled]="viewMode"
+                     required
+           #departmentNameInput="ngModel" />
+           <!-- Show validation error message -->
+    <div *ngIf="departmentNameInput.invalid && (departmentNameInput.dirty || departmentNameInput.touched)" class="text-danger">
+      Department Name is required.
+    </div>
             </div>
           </div>
           <div class="form-group row">
@@ -76,8 +83,14 @@
                      id="DepartmentCode"
                      name="DepartmentCode"
                      placeholder="Department Code"
-                     [(ngModel)]="newdept.DepartmentCode" [disabled]="viewMode" />
+                     [(ngModel)]="newdept.DepartmentCode" [disabled]="viewMode"
+                     required
+           #DepartmentCodeInput="ngModel" />
+            <!-- Show validation error message -->
+    <div *ngIf="DepartmentCodeInput.invalid && (DepartmentCodeInput.dirty || DepartmentCodeInput.touched)" class="text-danger">
+      Department Code is required.
             </div>
+          </div>
           </div>
           <div class="form-group row">
             <label for="Comments" class="col-sm-2 col-form-label">Comments</label>
@@ -87,7 +100,13 @@
                         name="Comments"
                         rows="3"
                         placeholder="Comments"
-                        [(ngModel)]="newdept.Comments" [disabled]="viewMode"></textarea>
+                        [(ngModel)]="newdept.Comments" [disabled]="viewMode"
+                        required
+           #CommentsInput="ngModel"></textarea>
+           <!-- Show validation error message -->
+    <div *ngIf="CommentsInput.invalid && (CommentsInput.dirty || CommentsInput.touched)" class="text-danger">
+      Comments is required.
+            </div>
             </div>
           </div>
           
@@ -98,7 +117,7 @@
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
         </div>
