--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -10,40 +10,61 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Document Type</label>
+            <label for="documentType" class="col-sm-2 col-form-label">Document Type <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
                      id="documentType"
                      name="documentType"
                      placeholder="Document Type Name"
-                     [(ngModel)]="documentType.Documenttypename" [disabled]="viewMode" />
+                     [(ngModel)]="documentType.Documenttypename" [disabled]="viewMode" 
+                     required
+                     #documentTypeInput="ngModel"
+                     />
+                     <div *ngIf="documentTypeInput.invalid && (documentTypeInput.dirty || documentTypeInput.touched)" class="text-danger">
+                      Enter Document Type.
+                    </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Prefix</label>
+            <label for="prefix" class="col-sm-2 col-form-label">Prefix <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
                      id="prefix"
                      name="prefix"
-                     placeholder="Prefix"
-                     [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode" />
+                     placeholder=""
+                     [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode"
+                     required
+                     #prefixInput="ngModel"
+                      />
+                      <div *ngIf="prefixInput.invalid && (prefixInput.dirty || prefixInput.touched)" class="text-danger">
+                        Enter prefix name.
+        
+                      </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label">Description</label>
+            <label for="description" class="col-sm-2 col-form-label">Description <span style="color: red; font-weight: bolder;">*</span> </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="description"
                         name="description"
                         rows="3"
                         placeholder="Description"
-                        [(ngModel)]="documentType.Description" [disabled]="viewMode"></textarea>
+                        [(ngModel)]="documentType.Description" [disabled]="viewMode"
+                        required
+                       #descriptionInput="ngModel">
+                     
+                      </textarea>
+                      <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
+                        Enter description.
+        
+                      </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="department" class="col-sm-2 col-form-label">Assign to Department</label>
+            <label for="department" class="col-sm-2 col-form-label">Assign to Department <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
 
               <div *ngIf="viewMode">
@@ -62,7 +83,11 @@
               <div *ngIf="!viewMode">
                 <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department"
                                name="department" id="department" optionLabel="DepartmentName"
-                               display="chip">
+                               display="chip"   required
+                               #departmentInput="ngModel"  >
+                               <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
+                                Enter department.
+                               </div>      
                 </p-multiSelect>
               </div>
             </div>
