--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -28,7 +28,7 @@
                     <tr>  
                         <td>{{ i + 1 }}</td>  
                          <td>
-                            <p (click)="viewtask(assigned.TaskType,assigned.ReferenceId)">{{ assigned.TaskType }}</p>
+                            <a href="javascript:void(0)" (click)="viewtask(assigned)">{{ assigned.TaskType }}</a>
                         </td> 
                        
                         <td>{{assigned.TaskName}}</td>
