--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -64,11 +64,11 @@
             <div class="col-sm-10">
 
               <p-dropdown
-              name="dj"
+              name="DepartmentName"
               [options]="types"
               [(ngModel)]="adduser.Department"
-              optionLabel="dj" placeholder="Select a Department"
-              optionValue="dj" 
+              optionLabel="DepartmentName" placeholder="Select a Department"
+              optionValue="DepartmentName" 
               [required]="true" 
               #djInput="ngModel"
               
