--- a/VlimsApp/ClientApp/src/app/layout/header/header.component.html
+++ b/VlimsApp/ClientApp/src/app/layout/header/header.component.html
@@ -19,7 +19,7 @@
             <a id="button-basic" dropdownToggle type="button" class="dropdown-toggle"
                     aria-controls="dropdown-basic">
                     <img src="../../../assets/images/user.png"  width="32" height="32" class="rounded-circle mx-2">
-                    <span>Clara Mike</span> <span class="caret"></span>
+                    <span>{{user}}</span> <span class="caret"></span>
           </a>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                 role="menu" aria-labelledby="button-basic">
