--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -44,7 +44,7 @@
                         <td>{{revision?.reviewDate| date}}</td>                        
                         <td><span class="status" [ngClass]="getStatusClass(revision['status'])">{{revision.status}} </span></td>
                         <td>{{revision?.version}}</td>
-                        <td class="text-center"><i *ngIf="revision?.status=='InProgress'" (click)="editdocrevision(revision)" class="bi bi-pencil"></i></td>
+                        <td class="text-center"><i *ngIf="revision?.status=='IN-PROGRESS'" (click)="editdocrevision(revision)" class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
