--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -75,14 +75,11 @@
               Cancel
             </button>
             <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid">Submit</button>
-            <div *ngIf="iscompleted">
-            <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && request.status!='Approved'"
-              (click)="approve()">Approve</button>
-            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary"
-              *ngIf="viewMode && request.status!='Approved'" (click)="reinitiative()">Re-Initiative</button>
-            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger"
-              *ngIf="viewMode && request.status!='Approved'" (click)="reject()">Reject</button>
-            </div>
+            
+            <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
+            
           </div>
         </div>
       </form>
