--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -16,7 +16,7 @@
               <p-dropdown name="docType" [options]="preparations" [(ngModel)]="print.documentNumber"
                 optionLabel="documentno" optionValue="documentno" (onChange)="documentNumberChange($event)" 
                 [autoDisplayFirst]="false" [required]="true"
-                #documentnoInput="ngModel">
+                #documentnoInput="ngModel" [disabled]="viewMode">
               </p-dropdown>
               <div *ngIf="documentnoInput.invalid && (documentnoInput.dirty || documentnoInput.touched)" class="text-danger">
                 Document Number is required.
@@ -60,7 +60,7 @@
               <div class="col-sm-10">
                 <p-dropdown name="workflow" [options]="workflowsSource" [(ngModel)]="print.workflow"
                   optionLabel="workflowName" optionValue="workflowName" [autoDisplayFirst]="false" [required]="true"
-                  #WorkflowInput="ngModel">
+                  #WorkflowInput="ngModel" [disabled]="viewMode">
                 </p-dropdown>
                 <div *ngIf="WorkflowInput.invalid && (WorkflowInput.dirty || WorkflowInput.touched)" class="text-danger">
                   Workflow is required.
@@ -80,8 +80,11 @@
           <div class="form-group row my-4">
             <div class="col-sm-10 offset-sm-2">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" *ngIf="!editMode">Submit</button>
-              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" *ngIf="editMode">Update</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid"  *ngIf="!viewMode">Submit</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" *ngIf="editMode" >Update</button>
+              <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
             </div>
           </div>
 
